Closed Bug 618057 Opened 15 years ago Closed 15 years ago

Fix avmplus and MMgc projects to be stricter

Categories

(Tamarin Graveyard :: Build Config, defect, P2)

x86
Windows 2000
defect

Tracking

(Not tracked)

RESOLVED FIXED
Q3 11 - Serrano

People

(Reporter: treilly, Assigned: treilly)

References

Details

Attachments

(3 files)

The reason we keep running into warning problems with flash is that they add /Wall as well as disabling more specific warnings. We should do that to our avmplus and MMgc projects too.
Depends on: 618059
Attachment #497884 - Flags: review?(lhansen)
Attachment #497884 - Flags: feedback?
Comment on attachment 497884 [details] [diff] [review] Use platform appropriate typedef for vmpi_thread_t This fixes /Wall warnings on void*/DWORD casts
Attachment #497884 - Flags: feedback?(siwilkin)
Attachment #497884 - Flags: feedback?(fklockii)
Attachment #497884 - Flags: feedback?
Comment on attachment 497884 [details] [diff] [review] Use platform appropriate typedef for vmpi_thread_t Seems plausible.
Attachment #497884 - Flags: review?(lhansen) → review+
Attachment #497884 - Flags: feedback?(fklockii) → feedback+
changeset: 5683:02eda265f1a6 user: Tommy Reilly <treilly@adobe.com> summary: Bug 618057 - Fix avmplus and MMgc projects to be stricter, first fix some warnings aroud vmpi_thread_t (r=lhansen) http://hg.mozilla.org/tamarin-redux/rev/02eda265f1a6
changeset: 5684:72d4904a24a6 user: Tommy Reilly <treilly@adobe.com> summary: Bug 618057 - Missing from previous change, remove now unnecessary casts (r=lhansen) http://hg.mozilla.org/tamarin-redux/rev/72d4904a24a6
Attachment #498114 - Flags: review?(lhansen)
Attachment #498118 - Flags: review?(lhansen)
changeset: 5685:af5a02cdc698 user: Tommy Reilly <treilly@adobe.com> summary: Bug 618057 - More vmpi_thread_t cleanup http://hg.mozilla.org/tamarin-redux/rev/af5a02cdc698
Comment on attachment 498114 [details] [diff] [review] Fix void*/uint64_t warning problem Rubber stamp, I don't really know this code.
Attachment #498114 - Flags: review?(lhansen) → review+
Comment on attachment 498118 [details] [diff] [review] Capstone: Make our projects strict like the players I'd probably be more comfortable if those warnings were disabled in the code, along with all the other ones, in the windows platform directory, than in the project file. (win32-platform.h)
Attachment #498118 - Flags: review?(lhansen) → review+
In reply to comment #10) > Comment on attachment 498118 [details] [diff] [review] > Capstone: Make our projects strict like the players > > I'd probably be more comfortable if those warnings were disabled in the code, > along with all the other ones, in the windows platform directory, than in the > project file. (win32-platform.h) Yeah me too but that doesn't work, enabling /Wall makes the system headers start to throw warnings so disabling them in win32-platform.h doesn't work.
Comment on attachment 497884 [details] [diff] [review] Use platform appropriate typedef for vmpi_thread_t A belated f+ This reminds me though, we assume that vmpi_thread_t's can be compared with == on all our platforms. This clearly holds at the moment, but at some stage we may want to think about using pthread_equals instead.
Attachment #497884 - Flags: feedback?(siwilkin) → feedback+
changeset: 5686:eacb19258e91 user: Tommy Reilly <treilly@adobe.com> summary: Bug 618057 - fix linux warnings 0 is the right value for an uninitlized thread, not NULL http://hg.mozilla.org/tamarin-redux/rev/eacb19258e91
changeset: 5687:f4809ce0c7de user: Tommy Reilly <treilly@adobe.com> summary: Bug 618057 - fix uint64_t/void* casting problems in Sampler (r=lhansen) http://hg.mozilla.org/tamarin-redux/rev/f4809ce0c7de
changeset: 5688:8b0f0206ca36 user: Tommy Reilly <treilly@adobe.com> summary: Bug 618057 - Update project files to match the player, Wall with more DisableSpecificWarnings (r=lhansen) http://hg.mozilla.org/tamarin-redux/rev/8b0f0206ca36
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: