Bug 618057 - Fix avmplus and MMgc projects to be stricter, first fix some warnings aroud vmpi_thread_t (r=lhansen)